Fix date and remove footer on mobile.

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -22,6 +22,7 @@ footer {
   }
 
   @media (max-width: $tablet) {
+    display: none;
   }
 
 }
